Safari fix: font size reduction on mobile

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -81,10 +81,10 @@ $aniduration: 20s;
         height: 27rem; 
 
         &__msg {
-            h1 {
+            &__heading {
                 font-size: 2.4rem;
             }
-            h3 {
+            &__subheading {
                 font-size: 1.4rem;
             }
 
